Remove "problematic" loot chests.
People will just have to manually blacklist them.

Alternately, this is broken completely?